@@ -18,6 +18,7 @@ perl                        = 5.008
 Class::Load                 = 0.06
 Data::Dump                  = 0
 IRC::Utils                  = 0.07
+IO::WrapOutput              = 0.02
 JSON::XS                    = 0
 Module::Pluggable           = 0
 POE                         = 1.310
